# hackmit2025

./: .gitignore  HACKATHON_SUBMISSION.md  README.md  SETUP.md  agent_loop.py  api_requirements.txt  api_server.py  claims_4dOgWZsDB6Q.json  high_importance_claims_4dOgWZsDB6Q.json  package-lock.json  pyproject.toml  summary_agent.py  video_metadata.py
agents/claim_extraction/: test_basic.py
agents/claim_verification/: __init__.py  agents.py  orchestrator.py  setup.py  test_basic.py
chrome-extension/: manifest.config.ts  package-lock.json  package.json  tailwind.config.js
chrome-extension/src/: background.ts
chrome-extension/src/content/: main.tsx
chrome-extension/src/services/: api.ts
chrome-extension/src/sidepanel/: App.tsx  index.css  index.html  types.ts
chrome-extension/src/sidepanel/components/: ClaimFeed.tsx  ClaimItem.tsx  DebateStats.tsx  Footer.tsx  GaugeComponent.tsx  Header.tsx  MarkdownRenderer.tsx  SpeakerAnalysis.tsx  StartMenu.tsx  VideoInfo.tsx
claim_extraction/: __init__.py  agent.py  test_basic.py  test_video_claims.py
claim_verification/: README.md  __init__.py  agents.py  base_agent.py  example_no_api_key.py  example_usage.py  orchestrator.py  requirements.txt  test_basic.py  test_simple_search.py
experiments/: assign_speakers_from_audio.py  test_youtube_claude_transcript.py  test_youtube_transcript_api.py
